@@ -1,5 +1,8 @@
 LIST OF CHANGES
 
+ - Added manufacturer_is_UltimaGenomics method to npg_tracking::Schema::Result::Instrument
+   class.
+
 release 106.0.0 (2025-11-18)
  - Consolidated functionality of the Ultimagen staging monitor in one class.
    Monitor::Ultimagen::RunParser class is deleted, the code from this class is
